<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Fragments.AboutFragment">

	<androidx.cardview.widget.CardView
		android:id="@+id/customActionBarLayout"
		style="@style/ToolbarBackground"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		app:cardElevation="10dp">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:layout_marginStart="15dp"
				android:layout_marginTop="15dp"
				android:layout_marginEnd="15dp"
				android:layout_marginBottom="15dp"
				android:fontFamily="@font/gabarito_bold"
				android:text="ABOUT US"
				android:textColor="@color/white"
				android:textSize="20sp" />

		</RelativeLayout>

	</androidx.cardview.widget.CardView>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/customActionBarLayout">

		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<RelativeLayout
				android:id="@+id/upperLayout"
				style="@style/TopCardBackground"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:elevation="5dp">

				<androidx.appcompat.widget.AppCompatImageView
					android:layout_width="match_parent"
					android:layout_height="150dp"
					android:layout_centerHorizontal="true"
					android:src="@drawable/logo_2_v2" />

			</RelativeLayout>

			<androidx.cardview.widget.CardView
				style="@style/BaseCardBackground"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				app:cardCornerRadius="10dp"
				app:cardElevation="5dp">

				<androidx.appcompat.widget.LinearLayoutCompat
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="100dp"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="5dp">

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView2"
						style="@style/RoundedTextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="20dp"
						android:elevation="5dp"
						android:fontFamily="@font/gabarito_bold"
						android:padding="5dp"
						android:text="About Our Project"
						android:textSize="20sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView3"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:fontFamily="@font/gabarito_medium"
						android:text="@string/about_p1"
						android:textAlignment="center"
						android:textSize="17sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView4"
						style="@style/RoundedTextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:elevation="5dp"
						android:fontFamily="@font/gabarito_bold"
						android:padding="5dp"
						android:text="Our Mission"
						android:textSize="20sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView5"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:fontFamily="@font/gabarito_medium"
						android:text="@string/our_mission"
						android:textAlignment="center"
						android:textSize="17sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView6"
						style="@style/RoundedTextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:elevation="5dp"
						android:fontFamily="@font/gabarito_bold"
						android:padding="5dp"
						android:text="What Set Us Apart"
						android:textSize="20sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView7"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:fontFamily="@font/gabarito_medium"
						android:text="@string/what_set_us_apart"
						android:textAlignment="center"
						android:textSize="17sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView8"
						style="@style/RoundedTextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:elevation="5dp"
						android:fontFamily="@font/gabarito_bold"
						android:padding="5dp"
						android:text="Our Features"
						android:textSize="20sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView9"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="start"
						android:layout_marginStart="10dp"
						android:layout_marginTop="10dp"
						android:elevation="5dp"
						android:fontFamily="@font/gabarito_semibold"
						android:text="Accessible Vehicles:"
						android:textSize="17sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView10"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:fontFamily="@font/gabarito_medium"
						android:text="@string/accessible_vehicles"
						android:textAlignment="center"
						android:textSize="17sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView11"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="start"
						android:layout_marginStart="10dp"
						android:layout_marginTop="10dp"
						android:fontFamily="@font/gabarito_semibold"
						android:text="Personalized Assistance:"
						android:textSize="17sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView12"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:fontFamily="@font/gabarito_medium"
						android:text="@string/personalized_assistance"
						android:textAlignment="center"
						android:textSize="17sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView13"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="start"
						android:layout_marginStart="10dp"
						android:layout_marginTop="10dp"
						android:fontFamily="@font/gabarito_semibold"
						android:text="Safety First:"
						android:textSize="17sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView14"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:fontFamily="@font/gabarito_medium"
						android:text="@string/safety_first"
						android:textAlignment="center"
						android:textSize="17sp" />

					<de.hdodenhof.circleimageview.CircleImageView
						style="@style/ProfilePictureBorderColor"
						android:layout_width="150dp"
						android:layout_height="150dp"
						android:layout_marginTop="10dp"
						android:src="@drawable/hcdc_logo" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView15"
						style="@style/RoundedTextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:elevation="5dp"
						android:fontFamily="@font/gabarito_bold"
						android:padding="5dp"
						android:text="Acknowledgements"
						android:textSize="25sp" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView16"
						style="@style/TextColor"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:fontFamily="@font/gabarito_medium"
						android:text="@string/acknowledgments"
						android:textAlignment="center"
						android:textSize="17sp" />

				</androidx.appcompat.widget.LinearLayoutCompat>

			</androidx.cardview.widget.CardView>

		</androidx.appcompat.widget.LinearLayoutCompat>

	</androidx.core.widget.NestedScrollView>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/backFloatingBtn"
		style="@style/FloatingButtonBackground"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentBottom="true"
		android:layout_marginStart="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="10dp"
		android:contentDescription="@string/accessibility"
		android:elevation="10dp"
		android:importantForAccessibility="yes"
		android:src="@drawable/back"
		app:borderWidth="2dp"
		app:fabCustomSize="70dp"
		app:fabSize="normal"
		app:useCompatPadding="true" />

</RelativeLayout>