<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background"
	tools:context=".Fragments.ContactUsFragment">

	<androidx.cardview.widget.CardView
		android:id="@+id/customActionBarLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		app:cardBackgroundColor="@color/light_gray"
		app:cardElevation="5dp">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageButton
				android:id="@+id/imgBackBtn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:layout_marginStart="10dp"
				android:layout_marginTop="10dp"
				android:layout_marginEnd="10dp"
				android:layout_marginBottom="10dp"
				android:background="@color/light_gray"
				android:src="@drawable/back_50_2" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:fontFamily="@font/opensans_bold"
				android:text="Contact Us"
				android:textColor="@color/black"
				android:textSize="20sp" />


		</RelativeLayout>


	</androidx.cardview.widget.CardView>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/customActionBarLayout">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<RelativeLayout
				android:id="@+id/upperLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/rectangle_one"
				android:elevation="5dp">


				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="20dp"
					android:layout_marginBottom="20dp"
					android:src="@drawable/contact_us_128" />


			</RelativeLayout>

			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:layout_marginBottom="20dp"
				android:elevation="4dp"
				app:cardCornerRadius="8dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="20dp"
					android:gravity="center"
					android:orientation="vertical">


					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:fontFamily="sans-serif"
						android:text="@string/for_any_inquiries"
						android:textAlignment="center"
						android:textColor="@color/black"
						android:textSize="17sp"
						android:textStyle="bold" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:background="@drawable/custom_card_view_1"
						android:backgroundTint="@color/light_gray"
						android:elevation="5dp"
						android:gravity="center"
						android:orientation="vertical">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_margin="10dp"
							android:drawablePadding="5dp"
							android:fontFamily="sans-serif"
							android:text="Email:"
							android:textAlignment="center"
							android:textColor="@color/black"
							android:textSize="17sp"
							android:textStyle="bold"
							app:drawableStartCompat="@drawable/email_24" />


						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_margin="10dp"
							android:fontFamily="sans-serif"
							android:text="@string/admin_emails"
							android:textAlignment="center"
							android:textColor="@color/black"
							android:textSize="17sp"
							android:textStyle="bold" />

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_margin="10dp"
							android:drawablePadding="5dp"
							android:fontFamily="sans-serif"
							android:text="Phone:"
							android:textAlignment="center"
							android:textColor="@color/black"
							android:textSize="17sp"
							android:textStyle="bold"
							app:drawableStartCompat="@drawable/phone_24" />

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_margin="10dp"
							android:fontFamily="sans-serif"
							android:text="@string/admin_phones"
							android:textAlignment="center"
							android:textColor="@color/black"
							android:textSize="17sp"
							android:textStyle="bold" />


					</LinearLayout>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:fontFamily="sans-serif"
						android:text="@string/your_feedback_helps_us_improve"
						android:textAlignment="center"
						android:textColor="@color/black"
						android:textSize="17sp"
						android:textStyle="bold" />


				</LinearLayout>


			</androidx.cardview.widget.CardView>

		</LinearLayout>

	</ScrollView>


</RelativeLayout>